[package]
name = "qubitro-mqtt"
version = "0.1.0"
authors = ["Qubitro"]
edition = "2018"

[[bin]]
name = "qubitro-mqtt"
path = "qubitro_mqtt_publish.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paho-mqtt = {git = "https://github.com/eclipse/paho.mqtt.rust", branch = "master"}
futures = { version = "0.3", features = ["compat"] } 